--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,25 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
 <html>
 
     <head>
-        <title>I-me Coffe</title>
+        <title>I-me Coffe {% block title %} {% endblock %}</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        
+        {% block custom_tags %}{% endblock %}
     </head>
 
     <body>
 
         <div class="page-header">
             {% if user.is_authenticated %}
-                # <a href="{}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                # <a href="{}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                <a href="{}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
             {% endif %}
             <a href="/admin/" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
             <h1><a href="/">I-me Kávézója</a></h1>
