New data modell structure

--- a/raw_material/templates/raw_material/ware_list másolata.html
+++ b/raw_material/templates/raw_material/ware_list másolata.html
@@ -9,14 +9,13 @@
     </div>
     <p>{{wares_type_list}}</p>
     <p>{{wares}}</p>
-    <p>------------------------</p>
-    
+    <p>{{wares_name_list}}</p>
     <p>{{ware_type_list}}</p>
-    
+    <p>{{ware_dict}}</p>
 
-    {% for ware_type  in ware_type_list %}
+    {% for ware_type  in wares_type_list %}
     <h2> {{ ware_type }} </h2> 
-    
+    <h2> {{ ware_name }} </h2> 
     
 
     {% if user.is_authenticated %}
