--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -6,28 +6,31 @@
 
     <div>
         <h1><a href="/">Eddig vásárolt alapanyagok listája</a></h1>
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'ware_new' %}">  Új alapanyag  <span class="glyphicon glyphicon-plus"> </span></a>
+        {% endif %}
     </div>
-    <p>{{wares_type_list}}</p>
-    <p>{{wares}}</p>
-    <p>------------------------</p>
-    
-    <p>{{ware_type_list}}</p>
-    
-
+      
     {% for ware_type  in ware_type_list %}
     <h2> {{ ware_type }} </h2> 
     
     
 
-    {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'ware_new' %}"><span class="glyphicon glyphicon-plus"> Új {{ ware_type }} fajta</span></a>
-    {% endif %}
 
     <p></p>
     <table border="1">
+        <tr>  
+            <th>*     Márka    *</th>
+            <th>*    Típus     *</th>
+            <th>*Kiszerelés [g]*</th>
+            <th>*  Csomag ára  *</th>
+            <th>*  Szerkeszt   *</th>
+            <th>*     Töröl    *</th>
+        </tr>
         {% for ware in wares %}
         
-            <tr>   
+
+            <tr>
             {% if ware.ware_type == ware_type %}   
                 <td><a href="">{{ ware.ware_brand }}</a></td>
                 <td>{{ ware.ware_brand_name }}</td>
