--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +13,6 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        {% block custom_tags %}{% endblock %}
     </head>
 
     <body>
@@ -33,6 +34,8 @@
                 </div>
             </div>
         </div>
+
+        
 
     </body>
 
