--- a/shop/templates/shop/main.html
+++ b/shop/templates/shop/main.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title-head %}
-    Online Shop
+   Online Shop
 {% endblock %}
 
 {% block lead %}
@@ -14,5 +15,8 @@
 <h1>MAIN Fő oldal</h1>
 <a class="btn btn-default" href="/raw_material/"><span >Rendelés</span></a>
 <a class="btn btn-default" href="/raw_material/"><span >Alapanyagok</span></a>
+<a href="/raw_material/">
+    <img src="{% static '/image/coffee_bean.jpg' %}" alt="coffee_bean" style="width:210px;height:420px;">
+  </a>
 
 {% endblock %}
