--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,24 @@
 {% load static %}
 {% load bootstrap4 %}
 
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
 <html>
 
     <head>
-        <title>I-me Coffe {% block title %} {% endblock %}</title>
+        <title>I-me Coffe 
+            {% block title %} 
+            {% endblock %}</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css\base.css' %}">
     </head>
 
     <body>
-
         <div class="page-header">
+            {% include 'layouts/navbar.html' %}
             {% if user.is_authenticated %}
                 <a href="{}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 <a href="{}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
