--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    ware list
+{% endblock %}
 
+{% block head %} Alapanyagok listája {% endblock %}
 
 {% block content %}
 
