--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,24 @@
 {% load static %}
-{% load bootstrap4 %}
-
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-<html>
+    <title>{% block title %}{% endblock %}</title>
+    {% block head %}{% endblock %}
+    {% include "base/css.html" %}
+</head>
+<body>
 
-    <head>
-        <title>I-me Coffe 
-            {% block title %} 
-            {% endblock %}</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css\base.css' %}">
-    </head>
+{% include "base/navbar.html" with site_title='Imre kávézója' %}
 
-    <body>
-        <div class="page-header">
-            {% include 'layouts/navbar.html' %}
-            {% if user.is_authenticated %}
-                <a href="{}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                <a href="{}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            {% endif %}
-            <a href="/admin/" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
-            <h1><a href="/">I-me Kávézója</a></h1>
-        </div>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% block content %}
-                    {% endblock %}
-                </div>
-            </div>
-        </div>
+    {% include "base/js.html" %}
 
-        
+    {% block bottom %}{% endblock %}
 
-    </body>
-
+    <script src="{% static 'js/search.js' %}"></script>
+</body>
 </html>
