--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -6,7 +6,7 @@
 {% url "contact_url" as contact_url %}
 {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
   <a class="navbar-brand" href="/">{{ site_title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
         <a class="nav-link" href="{% url 'raw_material:ware_new' %}">Products</a>
       </li>
       <li class="nav-item {% if request.path == contact_url %}active{% endif %}">
-        <a class="nav-link" href="{% url 'raw_material:ware_edit' %}">Contact us</a>
+        <a class="nav-link" href="{% url 'raw_material:ware_list' %}">Contact us</a>
       </li>
      {% if request.user.is_authenticated %}
      <li class="nav-item dropdown">
@@ -50,6 +50,7 @@
       <h6 class="nav-link" >Welcome: {{request.user}}</h6>
     </li>     
       {% endif %}
+    <li class="nav-item"> {%block head %}{% endblock %} </li>
     </ul>
     <!-- include 'search/snippets/search-form.html' -->
   </div>
