--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="page-header">
-        <div class="row-md-2">
+        <div class="row-md-1">
             <div class="col-md-12">
-                {% include "base/navbar.html" with site_title='Imre kávézója' %}
+                {% include "base/navbar.html" with site_title=' I me kávézója '  site_logo="src='/static/image/coffe_draw.webp'"  %}             
             </div>
         </div>        
     </div>>
