--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -7,6 +7,9 @@
 {% load static %}
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
+  <a class="navbar-brand">
+    <img {{ site_logo }} alt="Logo" style="width:50px;" class="rounded-pill">
+  </a>
   <a class="navbar-brand" href="/">{{ site_title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
