--- a/templates/home.html
+++ b/templates/home.html
@@ -3,3 +3,14 @@
 {% block title %}
     Homepage
 {% endblock %}
+
+<head>
+    <style>
+        body {
+          background-image: url("/static/image/coffe_draw.webp");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+        }
+    </style>
+</head>
