--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -1,59 +1,71 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     ware list
-{% endblock %}
-
-{% block head %} Alapanyagok listája {% endblock %}
-
-{% block content %}
-
-    <div>
-        <h1><a href="/">Eddig vásárolt alapanyagok listája</a>
-            {% if user.is_authenticated %}
-                <a class="btn btn-primary btn-lg" href="{% url 'raw_material:ware_new' %}">  Új alapanyag  <span class="fa fa-plus"> </span></a>
-            {% endif %}
-        </h1>
+    {% endblock %}
+    
+    
+    {% block content %}
+    
+    <div class="container-lg pt-5 border">
+        <div class="raw border">
+            <div class="col-sm-8 border">
+                <h2>Alapanyagok listája
+                    {% if user.is_authenticated %}
+                    <a class="btn btn-primary btn-lg" href="{% url 'raw_material:ware_new' %}">  Új alapanyag  <span class="fa fa-plus"> </span></a>
+                    {% endif %}
+                </h2>
+            </div>
+            <div class="col-sm-3 border">    </div>
+            <div class="col-sm-1 border">
+                <h2>
+                    <img src="{% static 'image/coffe_bean_draw.jfif' %}" class="rounded img-fluid right"  alt="coffe_draw">
+                </h2>
+            </div>
+        </div>
     </div>
-      
-    {% for ware_type  in ware_type_list %}
-    <h2> {{ ware_type }} </h2> 
+</br>
+    <div class="container-lg pt-5 border">
+
+        {% for ware_type  in ware_type_list %}
+        <h3> {{ ware_type }} </h3> 
+   
     
     
-
-
-    <p></p>
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>  
-                <th scope="col">     Márka    </th>
-                <th scope="col">    Típus     </th>
-                <th scope="col">Kiszerelés [g]</th>
-                <th scope="col">  Csomag ára  </th>
-                <th scope="col">  Szerkeszt   </th>
-                <th scope="col">     Töröl    </th>
-            </tr>
-            <i class="glyphicon glyphicon-plus"></i>
-        </thead>
-        {% for ware in wares %}
-        
-            <tr>
-            {% if ware.ware_type == ware_type %}   
-                <td><a href="">{{ ware.ware_brand }}</a></td>
-                <td>{{ ware.ware_brand_name }}</td>
-                <td>{{ ware.ware_weight }}</td>
-                <td>{{ ware.ware_price }}</td>
-                {% if user.is_authenticated %}
-                <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware.pk %}"><span class="fa fa-pencil"></span></a></td>
-                <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_remove' pk=ware.pk %}"><span class="fa fa-trash-o"></span></a></td>
+        <p></p>
+        <table class="table table-hover">
+            <thead class="table-dark">
+                <tr>  
+                    <th scope="col">     Márka    </th>
+                    <th scope="col">    Típus     </th>
+                    <th scope="col">Kiszerelés [g]</th>
+                    <th scope="col">  Csomag ára  </th>
+                    <th scope="col">  Szerkeszt   </th>
+                    <th scope="col">     Töröl    </th>
+                </tr>
+                <i class="glyphicon glyphicon-plus"></i>
+            </thead>
+            {% for ware in wares %}
+            
+                <tr>
+                {% if ware.ware_type == ware_type %}   
+                    <td><a href="">{{ ware.ware_brand }}</a></td>
+                    <td>{{ ware.ware_brand_name }}</td>
+                    <td>{{ ware.ware_weight }}</td>
+                    <td>{{ ware.ware_price }}</td>
+                    {% if user.is_authenticated %}
+                    <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware.pk %}"><span class="fa fa-pencil"></span></a></td>
+                    <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_remove' pk=ware.pk %}"><span class="fa fa-trash-o"></span></a></td>
+                    {% endif %}
                 {% endif %}
-            {% endif %}
-            </tr>
-        {% endfor %}
-
-    </table>
-    {% endfor %}
-    <p></p>
+                </tr>
+            {% endfor %}
     
-
-{% endblock %}
+        </table>
+        {% endfor %}
+        <p></p>
+        
+    
+    {% endblock %}
+    </div>  
