--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,17 @@
     Homepage
 {% endblock %}
 
-<head>
+
+{% block style %}    
     <style>
         body {
-          background-image: url("/static/image/coffe_draw.webp");
+          background-image: url(/static/image/coffee_bg_7.jpg);
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: 100% 100%;
         }
     </style>
-</head>
+{% endblock %}
+{% block content %}
+
+{% endblock %}
