--- a/raw_material/templates/raw_material/acquisition_new.html
+++ b/raw_material/templates/raw_material/acquisition_new.html
@@ -14,7 +14,7 @@
         }
         h2  {
         text-align: center;
-        color: azure;
+        color: rgb(247, 155, 17);
         }
     </style>
 {% endblock %} 
