--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -15,6 +15,7 @@
         td, th  {
         text-align: center;
         }
+
     </style>
 {% endblock %}    
     
@@ -22,34 +23,21 @@
     
     <div class="container pt-2"></div>
         <div class="row">
-            <div class="col-sm-1">
-                
-                <a>
-                    <img src="{% static 'image/coffe_bean_draw.jfif' %}" class="rounded" style="height:70px;" alt="coffe_draw">
-                </a>
-                
+            <div class="col-sm-2">
+                    <a href="{% url 'raw_material:ware_choice' %}">   
+                        <span>
+                            <img src ="{% static 'image/'|add:ware_type_list.ware_image %}" class="rounded" style="height:100px" alt="choice_back">  
+                        </a>                
+                        </span>
             </div>
             
             <div class="col-sm-7">
-                <h2 style="text-align:center">Alapanyagok listája</h2>
-            </div>
-            <div class="col-sm-3">
-                    {% if user.is_authenticated %}
-                    <a class="btn btn-primary btn-lg" href="{% url 'raw_material:ware_new' %}">  Új alapanyag  <span class="fa fa-plus"> </span></a>
-                    {% endif %}
-                
+                <h2 style="text-align:center">{{ware_type_list}} lista</h2>
             </div>
         </div>
     </div>
 
     <div class="container sm-6 pt-2">
-
-        {% for ware_type  in ware_type_list %}
-        <h3> {{ ware_type }} </h3> 
-   
-    
-    
-        <p></p>
         <table class="table table-sm-6 table-hover">
             <thead class="table-dark">
                 <tr>  
@@ -58,30 +46,28 @@
                     <th class="col-sm-1">Kiszerelés [g]</th>
                     <th class="col-sm-1">  Csomag ára  </th>
                     <th class="col-sm-1">  Szerkeszt   </th>
-                    <th class="col-sm-1">     Töröl    </th>
+                    
                 </tr>
                 <i class="glyphicon glyphicon-plus"></i>
             </thead>
-            {% for ware in wares %}
-            
-                <tr>
-                {% if ware.ware_type == ware_type %}   
+
+            {% for ware in wares %}            
+                <tr>                   
                     <th>{{ ware.ware_brand }}</th>
                     <td>{{ ware.ware_brand_name }}</td>
                     <td>{{ ware.ware_weight }}</td>
                     <td>{{ ware.ware_price }}</td>
-                    {% if user.is_authenticated %}
-                    <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware.pk %}"><span class="fa fa-pencil"></span></a></td>
-                    <td><a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_remove' pk=ware.pk %}"><span class="fa fa-trash-o"></span></a></td>
-                    {% endif %}
-                {% endif %}
+                    <td>
+                    {% if user.is_staff %}
+                        <a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware.pk %}"><span class="fa fa-pencil"></span></a>
+                        <a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_remove' pk=ware.pk %}"><span class="fa fa-trash-o"></span></a>
+                        {% endif %}
+                        {% if user.is_authenticated %}
+                        <a class="btn btn-primary btn-sm" href="{% url 'raw_material:ware_edit' pk=ware.pk %}"><span class="fa fa-shopping-basket"></span></a>
+                        {% endif %}
+                    </td>                
                 </tr>
-            {% endfor %}
-    
+            {% endfor %}    
         </table>
-        {% endfor %}
-        <p></p>
-        
-    
-    {% endblock %}
     </div>  
+    {% endblock %}
