--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -8,7 +8,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
   <a class="navbar-brand">
-    <img {{ site_logo }} alt="Logo" style="width:50px;" class="rounded-pill">
+    <img {{ site_logo }} alt="Logo" style="width:40px;" class="rounded-pill">
   </a>
   <a class="navbar-brand" href="/">{{ site_title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +18,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == cart_home_url %}active{% endif %}">
-        <a class="nav-link nav-cart-count" href="{% url 'raw_material:ware_list' %}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
+        <a class="nav-link nav-cart-count" href="{% url 'raw_material:ware_choice' %}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
       </li>
       <li class="nav-item {% if request.path == products_list_url %}active{% endif %}">
         <a class="nav-link" href="{% url 'raw_material:acquisition_new' %}">Products</a>
       </li>
       <li class="nav-item {% if request.path == contact_url %}active{% endif %}">
-        <a class="nav-link" href="{% url 'raw_material:ware_list' %}">Contact us</a>
+        <a class="nav-link" href="{% url 'raw_material:ware_choice' %}">Contact us</a>
       </li>
      {% if request.user.is_authenticated %}
      <li class="nav-item dropdown">
@@ -54,7 +54,7 @@
     </li>     
       {% endif %}
     <li class="nav-item"> 
-      <a class="nav-link"><img {{ sub_site_logo }} alt="Sub Logo" style="width:50px;" class="rounded-pill"></a>
+      <a class="nav-link"><img {{ sub_site_logo }} alt="Sub Logo" style="width:40px;" class="rounded-pill"></a>
     </li>
     
     </ul>
