--- a/raw_material/templates/raw_material/ware_choice.html
+++ b/raw_material/templates/raw_material/ware_choice.html
@@ -26,8 +26,14 @@
 <div class="container pt-2">
 
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm-8">
             <h2 style="text-align:center">Alapanyagok választása</h2>
+        </div>
+        <div class="col-sm-2">
+            {% if user.is_staff %}
+            <a class="btn btn-primary btn-lg" href="{% url 'raw_material:ware_new' %}">   
+                <span class="fa fa-plus"> Új árucikk</span></a>
+            {% endif %}    
         </div>
     </div>
     <div class="row">
