--- a/raw_material/templates/raw_material/ware_edit.html
+++ b/raw_material/templates/raw_material/ware_edit.html
@@ -15,13 +15,15 @@
 {% endblock %}  
 
 {% block content %}
-<h2> Alapanyag felvétele </h2>
+<h2> Alapanyag kezelő </h2>
+<h4>{{ware_type_list}}</h4>
+<h4>{{ware}}</h4>
 
 <div class="input-group mb-3">
 
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="cancel" class="cancel btn btn-primary" onclick="window.history.back();">Cancel</button>
+        <button type="cancel" class="cancel btn btn-primary">Cancel</button>
         {% if user.is_authenticated %}
             <button type="submit" class="save btn btn-primary">Save</button>
         {% endif %}
