--- a/raw_material/templates/raw_material/acquisition_list.html
+++ b/raw_material/templates/raw_material/acquisition_list.html
@@ -49,7 +49,7 @@
 
             {% for ware in wares %}          
                 <tr>
-                {% if ware.ware_type.ware_type == ware_type %}
+                {% if ware.ware_type.ware_type == ware_type and ware.acquisition and not ware.stores %}
 
                     <th class="col-sm-2">{{ ware.ware_type.ware_brand }} {{ ware.ware_type.ware_brand_name }}</th>
                     <td class="col-sm-2">{{ ware.acquisitor_user }}</td>
@@ -67,6 +67,7 @@
                         {% if user.is_authenticated %}
                         <a class="btn btn-primary btn-sm" href="{% url 'raw_material:acquisition_list' %}"><span class="fa fa-shopping-basket"></span></a>
                         {% endif %}
+                        {{ ware.acquisition }}{{ ware.stores }}
                     </td>
                 {% endif %}                
                 </tr>
