--- a/raw_material/templates/raw_material/ware_edit.html
+++ b/raw_material/templates/raw_material/ware_edit.html
@@ -23,7 +23,7 @@
 
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="cancel" class="cancel btn btn-primary">Cancel</button>
+        <button type="cancel" class="cancel btn btn-primary" onclick="window.history.back();">Cancel</button>
         {% if user.is_authenticated %}
             <button type="submit" class="save btn btn-primary">Save</button>
         {% endif %}
