checkbox to acquisition_list

--- a/raw_material/templates/raw_material/ware_list másolata.html
+++ b/raw_material/templates/raw_material/ware_list másolata.html
@@ -31,8 +31,15 @@
                
                 
             </div>
-            
-            <div class="col-sm-7">
+            <div class="col-sm-4 ">
+                <form>
+                    <input type="checkbox" id="store1" name="store1" value="Not" onclick="window.location.reload()">
+                    <label for="store1">Beszerzett áruk</label><br>
+                    <input type="checkbox" id="store2" name="store2" value="Nor" onclick="window.location.reload()">
+                    <label for="store2"> Raktározott Áruk</label><br>
+                </form>
+            </div>
+            <div class="col-sm-5">
                 <h2 style="text-align:center">Alapanyagok listája</h2>
             </div>
             <div class="col-sm-3">
