--- a/raw_material/templates/raw_material/acquisition_list.html
+++ b/raw_material/templates/raw_material/acquisition_list.html
@@ -4,6 +4,7 @@
 {% block title %}    
     ware list    
 {% endblock %}
+
 {% block style %}    
     <style>
         body {
@@ -22,23 +23,22 @@
     {% block content %}
     
     <div class="container"></div>
-        <div class="row">
-
-            
+        <div class="row">                                  
             <div class="col-sm-10">
                 <div class="row ">
-                    <div class="col-sm-6 ">
+                    <div class="col-sm-5 ">
                         <h2 style="text-align:Left">Készletek</h2>
                     </div>
-
-                    <div class="col-sm-4 ">
-                        <form>
-                            <input type="checkbox" id="store1" name="store1" value="Bike">
-                            <label for="vehicle1">Beszerzett áruk</label><br>
-                            <input type="checkbox" id="store2" name="store2" value="Car">
-                            <label for="vehicle2"> Raktározott Áruk</label><br>
-                        </form>
+                    
+                    <div class="col-sm-5 ">
+                            <form method="POST" class="post-form">{% csrf_token %}
+                                <input type="checkbox" id="acquisition_list" name="acquisition_list"  onclick="window.location.reload()">
+                                <label for="acquisition_list">Beszerezve</label><br>
+                                {{ form.as_p }}
+                            </form>
+                        </div>
                     </div>
+
                 </div>
             </div>
     </div>
@@ -62,7 +62,7 @@
 
             {% for ware in wares %}          
                 <tr>
-                {% if ware.ware_type.ware_type == ware_type and ware.acquisition and not ware.stores %}
+                {% if ware.ware_type.ware_type == ware_type and ware.acquisition %}
 
                     <th class="col-sm-2">{{ ware.ware_type.ware_brand }} {{ ware.ware_type.ware_brand_name }}  <br>
                          {{ ware.id }} </th>
